hphp/hack/test/typecheck/typing_fail_extends.php.like_types.exp
File "typing_fail_extends.php", line 28, characters 22-30:
Invalid return type (Typing[4110])
File "typing_fail_extends.php", line 34, characters 26-34:
Expected Option<T>
File "typing_fail_extends.php", line 28, characters 22-30:
But got dynamic because it is an unenforceable type
